Fix login button alignment

--- a/src/pages/Login/themes/platiagro/styles.css
+++ b/src/pages/Login/themes/platiagro/styles.css
@@ -43,7 +43,7 @@ body {
   max-width: 1024px;
   min-width: 320px;
   color: #333;
-  text-align: center;
+  text-align: left;
   padding: 24px;
   margin: 45px auto;
 }
